{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 223,
  "lineage": "d8cb3ada-861b-2de1-7960-072b92b38d3b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713065339:internet-gateway/igw-0deed2de86de9cb6f",
            "id": "igw-0deed2de86de9cb6f",
            "owner_id": "339713065339",
            "region": "us-east-1",
            "tags": {
              "Name": "mecanicaos-igw",
              "Project": "MecanicaOS"
            },
            "tags_all": {
              "Name": "mecanicaos-igw",
              "Project": "MecanicaOS"
            },
            "vpc_id": "vpc-06a58ce4d1b7bab9b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713065339:route-table/rtb-04515fa92b26c06c3",
            "id": "rtb-04515fa92b26c06c3",
            "owner_id": "339713065339",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0deed2de86de9cb6f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mecanicaos-rt-public",
              "Project": "MecanicaOS"
            },
            "tags_all": {
              "Name": "mecanicaos-rt-public",
              "Project": "MecanicaOS"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a58ce4d1b7bab9b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339713065339",
            "id": "rtb-04515fa92b26c06c3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0afc90213367eb0dc",
            "region": "us-east-1",
            "route_table_id": "rtb-04515fa92b26c06c3",
            "subnet_id": "subnet-0ca7faff1de1c5b0f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c551c7b8bf5aa7c",
            "region": "us-east-1",
            "route_table_id": "rtb-04515fa92b26c06c3",
            "subnet_id": "subnet-076dba61e593568f0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f72b65a72ff43967",
            "region": "us-east-1",
            "route_table_id": "rtb-04515fa92b26c06c3",
            "subnet_id": "subnet-036387678c3801921"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713065339:security-group/sg-0748e253ec6c62a94",
            "description": "Security group para EKS e services",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0748e253ec6c62a94",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "mecanicaos-sg",
            "name_prefix": "",
            "owner_id": "339713065339",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mecanicaos-sg",
              "Project": "MecanicaOS"
            },
            "tags_all": {
              "Name": "mecanicaos-sg",
              "Project": "MecanicaOS"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a58ce4d1b7bab9b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339713065339",
            "id": "sg-0748e253ec6c62a94",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713065339:subnet/subnet-0ca7faff1de1c5b0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca7faff1de1c5b0f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713065339",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "mecanicaos-subnet-1",
              "Project": "MecanicaOS"
            },
            "tags_all": {
              "Name": "mecanicaos-subnet-1",
              "Project": "MecanicaOS"
            },
            "vpc_id": "vpc-06a58ce4d1b7bab9b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339713065339",
            "id": "subnet-0ca7faff1de1c5b0f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713065339:subnet/subnet-076dba61e593568f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-076dba61e593568f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713065339",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "mecanicaos-subnet-2",
              "Project": "MecanicaOS"
            },
            "tags_all": {
              "Name": "mecanicaos-subnet-2",
              "Project": "MecanicaOS"
            },
            "vpc_id": "vpc-06a58ce4d1b7bab9b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339713065339",
            "id": "subnet-076dba61e593568f0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713065339:subnet/subnet-036387678c3801921",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036387678c3801921",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713065339",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "mecanicaos-subnet-3",
              "Project": "MecanicaOS"
            },
            "tags_all": {
              "Name": "mecanicaos-subnet-3",
              "Project": "MecanicaOS"
            },
            "vpc_id": "vpc-06a58ce4d1b7bab9b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339713065339",
            "id": "subnet-036387678c3801921",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713065339:vpc/vpc-06a58ce4d1b7bab9b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07ac6d89a966e9f40",
            "default_route_table_id": "rtb-0c6ef10d16aee0c1a",
            "default_security_group_id": "sg-0780192d1288266ce",
            "dhcp_options_id": "dopt-0ec5887801f31ab7c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06a58ce4d1b7bab9b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c6ef10d16aee0c1a",
            "owner_id": "339713065339",
            "region": "us-east-1",
            "tags": {
              "Name": "mecanicaos-vpc",
              "Project": "MecanicaOS"
            },
            "tags_all": {
              "Name": "mecanicaos-vpc",
              "Project": "MecanicaOS"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339713065339",
            "id": "vpc-06a58ce4d1b7bab9b",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}